--- a/wp-content/themes/uhc/src/scss/common/sections/archive.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/archive.scss
@@ -1,6 +1,10 @@
 .archive{
   &-wrapper{
     padding: 30px 0 170px;
+
+    @include media-breakpoint-down(sm){
+      padding: 20px 0 60px;
+    }
   }
 
   &-head{
@@ -14,6 +18,10 @@
       margin: 0 auto 40px;
       font-weight: $fw-bold;
       max-width: 1065px;
+
+      @include media-breakpoint-down(xs){
+        font-size: 14px;
+      }
     }
 
     &-links{
@@ -22,7 +30,7 @@
       flex-wrap: wrap;
       gap: 30px 63px;
       padding-bottom: 40px;
-      
+
       a{
         text-transform: uppercase;
         color: $gray-2;
@@ -45,11 +53,27 @@
       display: flex;
       flex-wrap: wrap;
       gap: 45px 30px;
+
+      @include media-breakpoint-down(xs){
+        gap: 24px;
+      }
     }
 
     .post-preview{
       width: 100%;
       max-width: calc(25% - 22.5px);
+
+      @include media-breakpoint-down(lg){
+        max-width: calc(33.33% - 20px);
+      }
+
+      @include media-breakpoint-down(sm){
+        max-width: calc(50% - 15px);
+      }
+
+      @include media-breakpoint-down(xs){
+        max-width: 100%;
+      }
     }
 
     &_3-columns{
