--- a/wp-content/themes/uhc/src/scss/common/sections/post-preview.scss
+++ b/wp-content/themes/uhc/src/scss/common/sections/post-preview.scss
@@ -1,15 +1,31 @@
 .post-preview {
-  border-radius: 50px;
+  border-radius: 24px;
   padding: 24px;
   display: flex;
   flex-direction: column;
   position: relative;
 
+  @include media-breakpoint-down(lg){
+    padding: 16px;
+  }
+
+  @include media-breakpoint-down(md){
+    background: $gray-1;
+  }
+
+  @include media-breakpoint-down(xs){
+    flex-direction: row;
+    gap: 16px;
+  }
+
   &:hover{
-    border-radius: 0;
 
     .post-preview__thumbnail {
       border-radius: 0;
+
+      @include media-breakpoint-down(md){
+        border-radius: 24px;
+      }
     }
     .post-preview__read-more {
       opacity: 1;
@@ -33,10 +49,33 @@
     width: 100%;
     height: 100%;
     max-height: calc(100% - 73px);
+
+    @include media-breakpoint-down(lg){
+      border-radius: 24px;
+    }
+
+    @include media-breakpoint-down(md){
+      display: none;
+    }
   }
 
   & > *{
     z-index: 1;
+  }
+
+  &__content-wrapper{
+    display: contents;
+    position: relative;
+    z-index: 1;
+
+    @include media-breakpoint-down(xs){
+      display: flex;
+      flex-direction: column;
+    }
+
+    & > *{
+      z-index: 1;
+    }
   }
 
   &__thumbnail {
@@ -49,6 +88,24 @@
     justify-content: center;
     align-items: center;
     transition: border-radius ease-out $transition;
+
+    @include media-breakpoint-down(lg){
+      border-radius: 24px;
+    }
+
+    @include media-breakpoint-down(md){
+      height: 175px;
+    }
+
+    @include media-breakpoint-down(sm){
+      height: 200px;
+    }
+
+    @include media-breakpoint-down(xs){
+      height: 140px;
+      max-width: 140px;
+      min-width: 140px;
+    }
 
     span {
       transition: transform ease-out $transition;
@@ -89,6 +146,17 @@
     text-align: left;
     padding-top: 32px;
 
+    @include media-breakpoint-down(md){
+      padding-top: 20px;
+      font-size: 12px;
+      font-weight: 500;
+    }
+
+    @include media-breakpoint-down(xs){
+      order: 2;
+      padding-top: 0;
+    }
+
     &:is(:hover, :focus) {
       text-decoration: underline;
     }
@@ -105,6 +173,16 @@
     display: flex;
     align-items: center;
     padding-top: 44px;
+
+    @include media-breakpoint-down(md){
+      padding-top: 20px;
+    }
+
+    @include media-breakpoint-down(xs){
+      order: 1;
+      padding-top: 0;
+      margin-bottom: 20px;
+    }
 
     &:before {
       content: '';
@@ -134,6 +212,16 @@
     transition: opacity ease-in-out $transition 0.1s;
     margin-top: auto;
 
+    @include media-breakpoint-down(md){
+      opacity: 1;
+      font-size: 12px;
+    }
+
+    @include media-breakpoint-down(xs){
+      order: 3;
+      font-size: 8px;
+    }
+
     &:is(:hover, :focus){
       color: $primary-color;
 
@@ -147,6 +235,10 @@
       display: flex;
       align-items: center;
       gap: 8px;
+
+      @include media-breakpoint-down(md){
+        margin-top: 20px;
+      }
     }
 
     .icon{
@@ -180,10 +272,18 @@
       &:before{
         border-radius: 0;
         box-shadow: 5px 5px 13.1px 0px rgba(0, 0, 0, 0.25);
+
+        @include media-breakpoint-down(md){
+          border-radius: 24px;
+        }
       }
 
       .post-preview__thumbnail{
         border-radius: 0;
+
+        @include media-breakpoint-down(md){
+          border-radius: 24px;
+        }
       }
 
       .post-preview-link{
